# alpha-zero-general

./: .gitignore  Arena.py  Coach.py  MCTS.py  debug.py  main.py  merged_model.py  myfile.py  pit.py
cpp_loadmodel/: CMakeLists.txt  install.sh  main.cpp  model.pb  save_model.py
cpp_loadmodel/src/: common.h  gobanggame.h  heuristic.h  main.cpp  model.h  players.h
gobang/: AlphaBetaSearch.py  GobangGame.py  GobangLogic.py  GobangPlayers.py
gobang/tensorflow/: GobangNNet.py  NNet.py
supervised/: supervised.py
